[project]
name = "wab.hello-world"
version = "1.0.0"
description = "SImple hello world service"
authors = [
    {name = "xsmikmat", email = "xsmikmat@mendelu.cz"},
]
dependencies = [
    "fastapi>=0.103.2",
    "uvicorn[standard]>=0.23.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev= "uvicorn main:app --reload"
test="pytest"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.2",
]
